update scrollbar, fix sliders bugs

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -228,7 +228,7 @@ html {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #431c53a0;
+  background: #F0C5FD;
 }
 
 ::-webkit-scrollbar-track {
